@@ -1,4 +1,4 @@
-/* $Id: finfo.c,v 1.31 2003/07/24 19:00:42 chorns Exp $
+/* $Id: finfo.c,v 1.32 2003/07/24 20:52:58 chorns Exp $
  *
  * COPYRIGHT:        See COPYING in the top level directory
  * PROJECT:          ReactOS kernel
@@ -13,9 +13,7 @@
 #include <ddk/ntddk.h>
 #include <wchar.h>
 
-#ifndef NDEBUG
 #define NDEBUG
-#endif
 #include <debug.h>
 
 #include "vfat.h"
